Start overhauling image loading